@@ -1,7 +1,8 @@
 cdrkit (9:1.1.3-1) unstable; urgency=medium
 
   * New upstream version with important bugfixes
-    + dealing with newline when searching for device (closes: #408456, 409005)
+    + dealing with newline when searching for device (closes: #408456).
+      Also telling the expected track size to not confuse (closes: #409005)
     + corrected picking up of the SCSI transfer size (closes: #407773)
     + restores forgotten compiler definitions on wodim (closes: #407611)
     + LFS support in UDF (closes: #411178, #401988)
